--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -681,7 +681,7 @@ body {
                                                         }
                                                     }
                                                     .foto {
-
+                                                        background: #000;
                                                     }
                                                     .carro{
                                                         background: $producto2_add_carro_cont_background;
