--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -792,7 +792,7 @@ body {
                                                         }
                                                     }
                                                     .foto {
-
+                                                        margin: 5px;
                                                     }
                                                     .carro{
                                                         padding: 5px;
