--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -470,6 +470,9 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   padding-left: 5px;
   padding-bottom: 5px;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .foto {
+  margin: 5px;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .carro {
   padding: 5px;
 }
