--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -731,6 +731,7 @@ body {
                         .cont_info {
                             .info_modal {
                                 .lista_productos {
+                                    padding: 10px;
                                     .producto {
                                         margin-bottom: 5px;
                                         .cont_producto{
