--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -754,6 +754,7 @@ body {
                                         }
                                         .carro{
                                             padding: 5px;
+                                            display: none;
                                             .add_carro_btn{
                                                 padding: 2px;
                                                 .add_info{
@@ -797,6 +798,7 @@ body {
                                                     }
                                                     .carro{
                                                         padding: 5px;
+                                                        display: none;
                                                         .add_carro_btn{
                                                             padding: 2px;
                                                             .add_info{
@@ -833,6 +835,7 @@ body {
                                         }
                                         .carro{
                                             padding: 5px;
+                                            display: none;
                                             .add_carro_btn{
                                                 padding: 2px;
                                                 .add_info{
