--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -685,19 +685,19 @@ body {
                                                     .foto {
                                                         background: #000;
                                                     }
-                                                    .carro{
+                                                    .carro {
                                                         background: $producto2_add_carro_cont_background;
-                                                        .add_carro_btn{
+                                                        .add_carro_btn {
                                                             background: $producto2_add_carro_background;
                                                             color: $producto2_add_carro_color;
-                                                            .add_info{
+                                                            .add_info {
 
                                                             }
-                                                            .add_logo{
+                                                            .add_logo {
 
                                                             }
                                                         }
-                                                        .add_carro_alert{
+                                                        .add_carro_alert {
 
                                                         }
                                                     }
@@ -706,32 +706,34 @@ body {
                                         }
                                     }
                                     .producto3{
-                                        .cont_pr{
-                                            .cont_prod{
-                                                .nombre{
+                                        .pro_fondo {
+                                            .cont_pr {
+                                                .cont_prod {
+                                                    .nombre {
 
-                                                }
-                                                .descripcion{
-                                                    
-                                                }
-                                                .precio{
-                                                    
+                                                    }
+                                                    .descripcion {
+                                                        
+                                                    }
+                                                    .precio {
+                                                        
+                                                    }
                                                 }
                                             }
                                         }
-                                        .carro{
+                                        .carro {
                                             background: $producto3_add_carro_cont_background;
-                                            .add_carro_btn{
+                                            .add_carro_btn {
                                                 background: $producto3_add_carro_background;
                                                 color: $producto3_add_carro_color;
-                                                .add_info{
+                                                .add_info {
 
                                                 }
-                                                .add_logo{
+                                                .add_logo {
 
                                                 }
                                             }
-                                            .add_carro_alert{
+                                            .add_carro_alert {
 
                                             }
                                         }
