--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -796,21 +796,21 @@ body {
                                                     .foto {
                                                         margin: 5px;
                                                     }
-                                                    .carro{
+                                                    .carro {
                                                         padding: 5px;
                                                         display: none;
-                                                        .add_carro_btn{
+                                                        .add_carro_btn {
                                                             padding: 2px;
-                                                            .add_info{
+                                                            .add_info {
                                                                 padding: 5px 30px 5px 5px;
                                                             }
-                                                            .add_logo{
+                                                            .add_logo {
                                                                 width: 24px;
                                                                 height: 24px;
                                                                 right: 5px;
                                                             }
                                                         }
-                                                        .add_carro_alert{
+                                                        .add_carro_alert {
                                                             padding: 5px 0px 0px 10px;
                                                         }
                                                     }
@@ -820,34 +820,36 @@ body {
                                     }
                                     .producto3{
                                         margin-bottom: 5px;
-                                        .cont_pr{
-                                            .cont_prod{
-                                                .nombre{
+                                        .pro_fondo {
+                                            .cont_pr {
+                                                .cont_prod {
+                                                    .nombre {
 
+                                                    }
+                                                    .descripcion {
+                                                        
+                                                    }
+                                                    .precio {
+                                                        
+                                                    }
                                                 }
-                                                .descripcion{
-                                                    
-                                                }
-                                                .precio{
-                                                    
-                                                }
-                                            }
+                                            } 
                                         }
-                                        .carro{
+                                        .carro {
                                             padding: 5px;
                                             display: none;
-                                            .add_carro_btn{
+                                            .add_carro_btn {
                                                 padding: 2px;
-                                                .add_info{
+                                                .add_info {
                                                     padding: 5px 30px 5px 5px;
                                                 }
-                                                .add_logo{
+                                                .add_logo {
                                                     width: 24px;
                                                     height: 24px;
                                                     right: 5px;
                                                 }
                                             }
-                                            .add_carro_alert{
+                                            .add_carro_alert {
                                                 padding: 5px 0px 0px 10px;
                                             }
                                         }
