--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -786,18 +786,18 @@ body {
                                                     .foto {
 
                                                     }
-                                                    .carro{
-                                                        .add_carro_btn{
+                                                    .carro {
+                                                        .add_carro_btn {
                                                             float: left;
                                                             position: relative;
-                                                            .add_info{
+                                                            .add_info {
 
                                                             }
-                                                            .add_logo{
+                                                            .add_logo {
 
                                                             }
                                                         }
-                                                        .add_carro_alert{
+                                                        .add_carro_alert {
                                                             float: left;
                                                         }
                                                     }
@@ -806,31 +806,33 @@ body {
                                         }
                                     }
                                     .producto3{
-                                        .cont_pr{
-                                            .cont_prod{
-                                                .nombre{
+                                        .pro_fondo {
+                                            .cont_pr {
+                                                .cont_prod {
+                                                    .nombre {
 
-                                                }
-                                                .descripcion{
-                                                    
-                                                }
-                                                .precio{
-                                                    
+                                                    }
+                                                    .descripcion {
+                                                        
+                                                    }
+                                                    .precio {
+                                                        
+                                                    }
                                                 }
                                             }
                                         }
-                                        .carro{
-                                            .add_carro_btn{
+                                        .carro {
+                                            .add_carro_btn {
                                                 float: left;
                                                 position: relative;
-                                                .add_info{
+                                                .add_info {
 
                                                 }
-                                                .add_logo{
+                                                .add_logo {
 
                                                 }
                                             }
-                                            .add_carro_alert{
+                                            .add_carro_alert {
                                                 float: left;
                                             }
                                         }
