--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -627,7 +627,7 @@ body {
 
                                                             }
                                                         }
-                                                        .add_carro_alert{
+                                                        .add_carro_alert {
 
                                                         }
                                                     }
@@ -636,29 +636,31 @@ body {
                                         }
                                     }
                                     .producto3{
-                                        .cont_pr{
-                                            .cont_prod{
-                                                .nombre{
+                                        .pro_fondo {
+                                            .cont_pr {
+                                                .cont_prod {
+                                                    .nombre {
 
-                                                }
-                                                .descripcion{
-                                                    
-                                                }
-                                                .precio{
-                                                    
+                                                    }
+                                                    .descripcion {
+                                                        
+                                                    }
+                                                    .precio {
+                                                        
+                                                    }
                                                 }
                                             }
                                         }
                                         .carro{
-                                            .add_carro_btn{
-                                                .add_info{
+                                            .add_carro_btn {
+                                                .add_info {
 
                                                 }
-                                                .add_logo{
+                                                .add_logo {
 
                                                 }
                                             }
-                                            .add_carro_alert{
+                                            .add_carro_alert {
 
                                             }
                                         }
