--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -808,6 +808,7 @@ body {
                                     .producto3{
                                         .pro_fondo {
                                             .cont_pr {
+                                                position: relative;
                                                 .cont_prod {
                                                     .nombre {
 
