--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -823,11 +823,13 @@ body {
                                         .pro_fondo {
                                             .cont_pr {
                                                 .cont_prod {
+                                                    width: 70%;
+                                                    left: 3%;
                                                     .nombre {
 
                                                     }
                                                     .descripcion {
-                                                        
+                                                        line-height: 12px;
                                                     }
                                                     .precio {
                                                         
