--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -770,6 +770,10 @@ body {
                                                 padding: 5px 0px 0px 10px;
                                             }
                                         }
+                                        .carro_no {
+                                            padding: 5px;
+                                            display: none;
+                                        }
                                     }
                                     .producto2 {
                                         margin-bottom: 5px;
@@ -814,6 +818,10 @@ body {
                                                             padding: 5px 0px 0px 10px;
                                                         }
                                                     }
+                                                    .carro_no {
+                                                        padding: 5px;
+                                                        display: none;
+                                                    }
                                                 }
                                             }
                                         }
@@ -823,8 +831,8 @@ body {
                                         .pro_fondo {
                                             .cont_pr {
                                                 .cont_prod {
-                                                    width: 70%;
-                                                    left: 3%;
+                                                    width: 75%;
+                                                    left: 5px;
                                                     .nombre {
 
                                                     }
@@ -854,6 +862,10 @@ body {
                                             .add_carro_alert {
                                                 padding: 5px 0px 0px 10px;
                                             }
+                                        }
+                                        .carro_no {
+                                            padding: 5px;
+                                            display: none;
                                         }
                                     }
                                 }
