--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -33,7 +33,7 @@ body .contenedor .pagina .cont_pagina .contenido {
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 /* MODALS BASE */
 body .contenedor .modals .cont_modals .modal {
-  background: #999;
+  background: #eee;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo {
   background: #f5f5f5;
@@ -56,7 +56,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal 
   background: #f5f5f5;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item {
-  border-bottom-color: #ddd;
+  border-top-color: #ddd;
 }
 /* MODALS PASO 01 CARRO */
 /* MODALS PASO 02 CARRO */
