--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -869,6 +869,14 @@ body {
                                         }
                                     }
                                 }
+                                .lista_categorias{
+                                    padding: 10px;
+                                    .promocion{
+                                        .cont_fondo{
+                                            
+                                        }
+                                    }
+                                }
                             }
                         }
                         .acciones {
