--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -422,7 +422,7 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto .cont_producto {
   padding: 10px;
-  min-height: 60px;
+  min-height: 80px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto .cont_producto .cont_info_pro {
   width: calc(100% - 20px);
@@ -505,6 +505,9 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 {
   margin-bottom: 5px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 .pro_fondo .cont_pr {
+  min-height: 80px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 .pro_fondo .cont_pr .cont_prod {
   width: 75%;
