--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -666,6 +666,28 @@ body {
                                         }
                                     }
                                 }
+                                .lista_categorias{
+                                    .promocion{
+                                        .cont_fondo{
+
+                                        }
+                                    }
+                                    .categoria{
+                                        .cont_fondo{
+                                            .cont_fondoi{
+                                                .nombre{
+
+                                                }
+                                                .descripcion{
+                                                    
+                                                }
+                                                .precio{
+                                                    
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
                             }
                         }
                         .acciones {
