--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -877,6 +877,21 @@ body {
 
                                         }
                                     }
+                                    .categoria{
+                                        .cont_fondo{
+                                            .cont_fondoi{
+                                                .nombre{
+
+                                                }
+                                                .descripcion{
+                                                    
+                                                }
+                                                .precio{
+                                                    
+                                                }
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
