--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -873,11 +873,13 @@ body {
                                 .lista_categorias{
                                     padding: 10px;
                                     .promocion{
+                                        margin-bottom: 5px;
                                         .cont_fondo{
 
                                         }
                                     }
                                     .categoria{
+                                        margin-bottom: 5px;
                                         .cont_fondo{
                                             .cont_fondoi{
                                                 .nombre{
