--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -838,11 +838,12 @@ body {
                                 .lista_categorias{
                                     .promocion{
                                         .cont_fondo{
-
+                                            position: relative;
                                         }
                                     }
                                     .categoria{
                                         .cont_fondo{
+                                            position: relative;
                                             .cont_fondoi{
                                                 .nombre{
 
