--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -835,25 +835,19 @@ body {
                                         }
                                     }
                                 }
-                                .lista_categorias{
-                                    .promocion{
-                                        .cont_fondo{
+                                .lista_categorias {
+                                    .promocion {
+                                        .cont_fondo {
                                             position: relative;
                                         }
                                     }
-                                    .categoria{
-                                        .cont_fondo{
+                                    .categoria {
+                                        .cont_fondo {
                                             position: relative;
-                                            .cont_fondoi{
-                                                .nombre{
-
-                                                }
-                                                .descripcion{
-                                                    
-                                                }
-                                                .precio{
-                                                    
-                                                }
+                                            .cont_fondoi {
+                                                .nombre{}
+                                                .descripcion{}
+                                                .precio{}
                                             }
                                         }
                                     }
