--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -739,24 +739,18 @@ body {
                                         }
                                     }
                                 }
-                                .lista_categorias{
-                                    .promocion{
-                                        .cont_fondo{
+                                .lista_categorias {
+                                    .promocion {
+                                        .cont_fondo {
 
                                         }
                                     }
-                                    .categoria{
-                                        .cont_fondo{
-                                            .cont_fondoi{
-                                                .nombre{
-
-                                                }
-                                                .descripcion{
-                                                    
-                                                }
-                                                .precio{
-                                                    
-                                                }
+                                    .categoria {
+                                        .cont_fondo {
+                                            .cont_fondoi {
+                                                .nombre{}
+                                                .descripcion{}
+                                                .precio{}
                                             }
                                         }
                                     }
