--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -870,27 +870,21 @@ body {
                                         }
                                     }
                                 }
-                                .lista_categorias{
+                                .lista_categorias {
                                     padding: 10px;
-                                    .promocion{
+                                    .promocion {
                                         margin-bottom: 5px;
-                                        .cont_fondo{
-                                            
+                                        .cont_fondo {
+
                                         }
                                     }
-                                    .categoria{
+                                    .categoria {
                                         margin-bottom: 5px;
-                                        .cont_fondo{
-                                            .cont_fondoi{
-                                                .nombre{
-
-                                                }
-                                                .descripcion{
-                                                    
-                                                }
-                                                .precio{
-                                                    
-                                                }
+                                        .cont_fondo {
+                                            .cont_fondoi {
+                                                .nombre{}
+                                                .descripcion{}
+                                                .precio{}
                                             }
                                         }
                                     }
