--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -839,6 +839,11 @@ body {
                                     .promocion {
                                         .cont_fondo {
                                             position: relative;
+                                            .cont_fondoi {
+                                                .nombre{}
+                                                .descripcion{}
+                                                .precio{}
+                                            }
                                         }
                                     }
                                     .categoria {
