--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -742,7 +742,11 @@ body {
                                 .lista_categorias {
                                     .promocion {
                                         .cont_fondo {
-
+                                            .cont_fondoi {
+                                                .nombre{}
+                                                .descripcion{}
+                                                .precio{}
+                                            }
                                         }
                                     }
                                     .categoria {
