--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -875,13 +875,21 @@ body {
                                     .promocion {
                                         margin-bottom: 5px;
                                         .cont_fondo {
-
+                                            .cont_fondoi {
+                                                width: 94%;
+                                                left: 3%;
+                                                .nombre{}
+                                                .descripcion{}
+                                                .precio{}
+                                            }
                                         }
                                     }
                                     .categoria {
                                         margin-bottom: 5px;
                                         .cont_fondo {
                                             .cont_fondoi {
+                                                width: 94%;
+                                                left: 3%;
                                                 .nombre{}
                                                 .descripcion{}
                                                 .precio{}
