--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -549,8 +549,16 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion {
   margin-bottom: 5px;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_fondoi {
+  width: 94%;
+  left: 3%;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria {
   margin-bottom: 5px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi {
+  width: 94%;
+  left: 3%;
 }
 /* MODALS PASO CARTA PENDIENTE */
 
