--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -549,9 +549,19 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion {
   margin-bottom: 5px;
 }
-body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_fondoi {
-  width: 94%;
-  left: 3%;
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo {
+  padding: 3%;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .cont_detalle_pro_np .nombre {
+  width: 50%;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .cont_detalle_pro_np .precio {
+  float: left;
+  width: 50%;
+  text-align: right;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .descripcion {
+  line-height: 12px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria {
   margin-bottom: 5px;
