--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -838,11 +838,19 @@ body {
                                 .lista_categorias {
                                     .promocion {
                                         .cont_fondo {
-                                            position: relative;
-                                            .cont_fondoi {
-                                                .nombre{}
+                                            .cont_detalle_pro {
+                                                .cont_detalle_pro_np {
+                                                    .nombre {
+                                                        float: left;
+                                                    }
+                                                    .precio {
+                                                        float: left;
+                                                    }
+                                                }
                                                 .descripcion{}
-                                                .precio{}
+                                                .listado {
+                                                    .prod_item{}
+                                                }
                                             }
                                         }
                                     }
