--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -838,6 +838,7 @@ body {
                                 .lista_categorias {
                                     .promocion {
                                         .cont_fondo {
+                                            position: relative;
                                             .cont_detalle_pro {
                                                 .cont_detalle_pro_np {
                                                     .nombre {
