--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -854,6 +854,11 @@ body {
                                                 }
                                             }
                                         }
+                                        .cont_fondoi {
+                                            .nombre{}
+                                            .descripcion{}
+                                            .precio{}
+                                        }
                                     }
                                     .categoria {
                                         .cont_fondo {
