--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -680,6 +680,11 @@ body {
                                                 }
                                             }
                                         }
+                                        .cont_fondoi {
+                                            .nombre{}
+                                            .descripcion{}
+                                            .precio{}
+                                        }
                                     }
                                     .categoria {
                                         .cont_fondo {
