--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -895,6 +895,13 @@ body {
                                                 }
                                             }
                                         }
+                                        .cont_fondoi {
+                                            width: 94%;
+                                            left: 3%;
+                                            .nombre{}
+                                            .descripcion{}
+                                            .precio{}
+                                        }
                                     }
                                     .categoria {
                                         margin-bottom: 5px;
