--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -876,7 +876,7 @@ body {
                                         margin-bottom: 5px;
                                         .cont_fondo {
                                             .cont_detalle_pro {
-                                                padding: 3%;
+                                                padding: 0px 3%;
                                                 .cont_detalle_pro_np {
                                                     .nombre {
                                                         width: 50%;
