--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -550,7 +550,7 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   margin-bottom: 5px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro {
-  padding: 3%;
+  padding: 0px 3%;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .cont_detalle_pro_np .nombre {
   width: 50%;
